gcc/testsuite/gdc.test/runnable/test11239.d
// EXTRA_SOURCES: imports/inc11239.d
// REQUIRED_ARGS: -debug
// COMPILE_SEPARATELY:
// PERMUTE_ARGS:

import imports.inc11239;

void main()
{
    foo(1);
}
